--- a/src/configurator/configurator.lpi
+++ b/src/configurator/configurator.lpi
@@ -20,12 +20,11 @@
     <VersionInfo>
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
-      <MajorVersionNr Value="1"/>
-      <BuildNr Value="56"/>
+      <MajorVersionNr Value="2"/>
+      <BuildNr Value="78"/>
       <Language Value="0419"/>
       <CharSet Value="04B0"/>
-      <Attributes pvaPreRelease="True"/>
-      <StringTable Comments="Приложение &quot;Конфигуратор&quot;" CompanyName="Planar, LLC" FileDescription="Приложение &quot;Конфигуратор&quot;" InternalName="Configurator.exe" LegalCopyright="Planar, LLC" OriginalFilename="Configurator.exe" ProductName="Конфигуратор" ProductVersion="1.0.0"/>
+      <StringTable Comments="Приложение &quot;Конфигуратор&quot;" CompanyName="Planar, LLC" FileDescription="Приложение &quot;Конфигуратор&quot;" InternalName="Configurator.exe" LegalCopyright="Planar, LLC" OriginalFilename="Configurator.exe" ProductName="Конфигуратор" ProductVersion="2.0.0"/>
     </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
@@ -82,6 +81,7 @@
       <Unit5>
         <Filename Value="..\modbus\units\umodbus.pas"/>
         <IsPartOfProject Value="True"/>
+        <UnitName Value="uModbus"/>
       </Unit5>
       <Unit6>
         <Filename Value="units\deviceform\udeviceform.pas"/>
@@ -93,6 +93,7 @@
       <Unit7>
         <Filename Value="..\library\units\ulibrary.pas"/>
         <IsPartOfProject Value="True"/>
+        <UnitName Value="uLibrary"/>
       </Unit7>
       <Unit8>
         <Filename Value="..\map\units\umap.pas"/>
@@ -284,6 +285,11 @@
       <OtherUnitFiles Value="units;..\setting\units;..\modbus\units;..\library\units;..\map\units;units\general;units\mainform;units\detailedbackupform;units\detailedbootloaderform;units\detaileddeviceform;units\detailedmodbusform;units\deviceform;units\detailedtrendsform;units\detailedgroupform;..\holdings\units;..\general\settingform\units;units\holdingsform;..\general\customeditor\units;..\general\splashform\units;units\update;units\about"/>
       <UnitOutputDirectory Value="..\..\lib"/>
     </SearchPaths>
+    <Parsing>
+      <SyntaxOptions>
+        <IncludeAssertionCode Value="True"/>
+      </SyntaxOptions>
+    </Parsing>
     <Linking>
       <Debugging>
         <GenerateDebugInfo Value="False"/>
